Changelog
=========

1.9.1 (unreleased)
------------------

- Fixed deploying into "own" user (no service user defined in environment) when remote and local user names are different (#106809, wosc).


1.9.0 (2018-10-26)
------------------

- Force clone of git repositories when the remote url changes (#106661).

- Implement basic sorting for Address-objects allowing to sort list of addresses (#100499)


1.8.0 (2018-08-16)
------------------

- Show stdout of rsync command at verification step of SyncDirectory when
  running in debug mode.
- Add VirtualEnv3.6 to support Python3.6


1.7.5 (2018-04-05)
------------------

- Fix compatability to `pip>=10.0` by using the ``download`` command instead of
  ``install --download``.


1.7.4 (2018-04-03)
------------------

- Fix compatability to `pip>=10.0` by no longer forcing eggs instead of wheels.


1.7.3 (2018-03-19)
------------------

- Fix git-bundle deploy when there are no changes to the deployment repository
  (#100645)


1.7.2 (2018-03-01)
------------------

- Fix `batou.lib.file.Purge` to be able to delete files again.


1.7.1 (2018-01-29)
------------------

- Fix git deployment repository handling.


1.7.0 (2018-01-29)
------------------

- `git.Clone` uses `git reset` instead of merge/checkout to get the defined
   state.

- batou uses `git reset` instead of merge/checkout to update the remote
  deployment repository.

- Improve error message when deploying a wrong branch.

1.6.1 (2017-11-27)
------------------

- Log very large (100k+) templates as dangerous. We've seen Jinja/Python
  segfault when users started using massively large (8MiB+) template files
  and this really isn't a good idea to start with. For example it increases
  computing time even at 100k quite a lot.

  We try to keep going, though. But in the case of segfaults the user sees a
  reasonable error message and knows what to do.

- Improve error reporting for missing our superfluous resources.
